--- a/FrameworkClassLibrary/FrameworkClassLibrary.csproj
+++ b/FrameworkClassLibrary/FrameworkClassLibrary.csproj
@@ -2,8 +2,8 @@
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-    <PackageId>Benner.FrameworkClassLibrary</PackageId>    
-	<FileVersion>2019.9.7.0</FileVersion>
+    <PackageId>Benner.FrameworkClassLibrary</PackageId>
+    <FileVersion>2019.9.7.0</FileVersion>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -11,8 +11,8 @@
     <ProjectGuid>{E1711175-4EE8-4E35-B6E3-207D7EA2DEC6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Benner.FrameworkClassLibrary</RootNamespace>
-    <AssemblyName>Benner.FrameworkClassLibrary</AssemblyName>
+    <RootNamespace>Nuget.FrameworkClassLibrary</RootNamespace>
+    <AssemblyName>Nuget.FrameworkClassLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
